Added GitHub and Twitter Icon
Added GitHub and twitter icons to the footer
Removed unused content.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,10 @@
     <!-- /.row -->
 </div>
 <!-- /.container -->
-    </div>
+
+{% include footer.html %}
+
+</div>
 
 </body>
 {% if site.google_analytics %}
