--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,16 @@
 <footer>
-            <div class="row">
-                <div class="col-lg-12 footer">
-               &copy;{{ site.time | date: "%Y"  }} {{site.company_name}}. All rights reserved. <br />
+    <div class="row">
+	    <div class="col-md-5"></div>
+		<div class="col-sm-6 col-md-2 links">
+			<ul class="nav navbar-nav">
+				<li class="github"><a href="http://github.com/robtweed/qewd" target="_blank"><i class="fa fa-github"></i></a></li>
+				<li class="twitter"><a href="https://twitter.com/qewdjs" target="_blank"><i class="fa fa-twitter"></i></a></li>
+			</ul>
+		</div>
+        <div class="col-sm-6 col-md-5 footer">
+       &copy;{{ site.time | date: "%Y"  }} {{site.company_name}}. All rights reserved. <br />
 {% if page.last_updated %}<span>Page last updated:</span> {{page.last_updated}}<br/>{% endif %} Site last generated: {{ site.time | date: "%b %-d, %Y"  }} <br />
 <p><img src="{{ "images/company_logo.png" }}" alt="Company logo"/></p>
-                </div>
-            </div>
+        </div>
+    </div>
 </footer>
