--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <script src="{{ "/js/jquery.navgoco.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/jquery.zoom.min.js" | prepend: site.baseurl }}"></script>
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
