--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -277,7 +277,7 @@ div#toc ul li ul li::before {
 }
 
 div#toc >ul::before {
-    content: "Table of Contents - pinned from CSS";
+    content: "Table of Contents";
     font-weight: 500;
     color: #555;
     text-align:center;
